[tool.poetry]
name = "qsim"
version = "0.1.0"
description = "Minimal simulator of quantum computers."
authors = ["Xander <gouws.xander@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
